# essentials-rs

./: Cargo.toml  README.md
http_client/: Cargo.toml
http_client/src/: client.rs  error.rs  lib.rs  multipart.rs
logger/: Cargo.toml
logger/src/: lib.rs  logger.rs
