[package]
name = "http_client"
version = "0.2.0"
edition = "2024"

[dependencies]
http = "1.3.1"
reqwest = { version = "0.12.20", features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = {version = "1.45.1", features = ["macros"]}